# Analyse-Financiere

./: .env.example  .gitignore  PHASE_2_ROADMAP.md  PHASE_3_PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_V3.md  README.md  README_PHASE3.5.md  README_PHASE3.6.md  README_PHASE3.7.md  README_PHASE3.8.md  README_PHASE3.md  app.py  app_simple.py  pyproject.toml  requirements.txt
docs/: FORMULAS_DSCR.md  formulas.md
scripts/: init_db.py
src/calculations/: __init__.py  base.py  covenant_tracker.py
src/calculations/banker/: __init__.py  cfads.py  debt_coverage.py  leverage.py
src/calculations/entrepreneur/: __init__.py  equity_returns.py  value_creation.py
src/calculations/standard/: __init__.py  liquidity.py  profitability.py
src/calculations/trends/: __init__.py  analyzer.py
src/core/: models.py  models_v3.py
src/database/: models.py
src/decision/: decision_engine.py
src/extraction/: __init__.py  ai_fallback.py  exceptions.py  extractor.py  pdf_parser.py  utils.py
src/normalization/: __init__.py  normalizer.py
src/persistence/: variant_manager.py
src/reporting/: pdf_generator.py
src/scenarios/: engine.py  parameters.py  stress_tester.py
src/ui/: app.py  app_v3.py  multi_deal_dashboard.py  tab2_enhanced.py  tab3_optimized.py  tab4_complete.py  variant_ui.py
src/ui/pages/: 1_Upload_PDF.py  2_Tendances.py  3_Comparaison.py
src/ui/utils/: __init__.py  formatting.py
src/visualization/: __init__.py  charts.py  dashboards.py
