[project]
name = "financial-acquisition-analyzer"
version = "0.1.0"
description = "Analyse financière d'entreprises pour acquisitions - à partir de liasses fiscales"
authors = [{name = "Christophe Berly"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Data manipulation
    "pandas>=2.1.0",
    "numpy>=1.26.0",

    # PDF extraction
    "pdfplumber>=0.10.0",
    "pypdf>=3.17.0",
    "camelot-py[cv]>=0.11.0",
    "opencv-python>=4.8.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",

    # Web interface
    "streamlit>=1.29.0",

    # Visualizations
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Reporting
    "jinja2>=3.1.0",
    "weasyprint>=60.0",

    # AI (optionnel - pour extraction PDF complexes)
    "anthropic>=0.40.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
    "ipykernel>=6.27.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
